--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="id_rest" class="rest">
         <h1 class="rest">The Batman</h1>
         <p class="rest"><span style="color: red;">"The Batman"</span>'The Batman', la nueva película de Matt Reeves ofrece una versión nueva y más oscura del icónico superhéroe de DC en la que Robert Pattinson hace de un aún joven Bruce Wayne que ayuda a Jim Gordon (Jeffrey Wright) a resolver una serie de asesinatos en Ciudad Gótica a través de muchos acertijos para resolver el plan de Enigma, pero ¿Tiene escena post créditos la película?</p>
+        <!-- Esto es el video del trailer de Batman, creo que una buena forma de insertarlo es a través de un iframe-->
         <iframe class="rest" width="420" height="315"
         src="https://www.youtube.com/watch?v=IqRRLA6pZvo&t=1s">
         </iframe>
