--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h1 class="rest">The Batman</h1>
         <p class="rest"><span style="color: red;">"The Batman"</span>'The Batman', la nueva película de Matt Reeves ofrece una versión nueva y más oscura del icónico superhéroe de DC en la que Robert Pattinson hace de un aún joven Bruce Wayne que ayuda a Jim Gordon (Jeffrey Wright) a resolver una serie de asesinatos en Ciudad Gótica a través de muchos acertijos para resolver el plan de Enigma, pero ¿Tiene escena post créditos la película?</p>
         <!-- Esto es el video del trailer de Batman, creo que una buena forma de insertarlo es a través de un iframe-->
-        <iframe class="rest" width="420" height="315"
-        src="https://www.youtube.com/watch?v=IqRRLA6pZvo&t=1s">
+        <iframe class="rest" width="800" height="600"
+        src="https://www.youtube.com/embed/IqRRLA6pZvo?start=1">
         </iframe>
         <h1 class="rest">Una escena post-créditos relativa</h1>
         <p class="rest">La respuesta es que no hay una escena propiamente dicha después de los créditos, pero sí hay algo, un easter egg. Si tienes curiosidad, querrás quedarte hasta el final. A diferencia de Marvel, que casi siempre tiene al menos una escena durante o después de los créditos de sus películas que dan pistas de lo que está por venir. Aquí el clip adicional al final está lejos de lo que normalmente esperaríamos. No es una escena rodada que presenta personajes en pantalla. Si tras casi tres horas de película quieres descubrirlo, es cosa tuya, si quieres saberlo, sigue leyendo.</p>
