todo excepto bonus y comentarios

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <title>Batman</title>
 </head>
 <body>
+    <!--El header de la página-->
     <div id="div_main" class="main">
         <p id="p_main" class="main">'The Batman': la misteriosa escena post-créditos de la película de Matt Reeves esconde un nuevo enigma para los fans
             The Batman</p>
     </div>
     <div id="id_rest" class="rest">
         <h1 class="rest">The Batman</h1>
-        <p class="rest"><span style="color: red;">"The Batman"</span>'The Batman', la nueva película de Matt Reeves ofrece una versión nueva y más oscura del icónico superhéroe de DC en la que Robert Pattinson hace de un aún joven Bruce Wayne que ayuda a Jim Gordon (Jeffrey Wright) a resolver una serie de asesinatos en Ciudad Gótica a través de muchos acertijos para resolver el plan de Enigma, pero ¿Tiene escena post créditos la película?</p>
+        <p class="rest"><span style="color: red;"> <!--Aqui el estilo inline creo que es mejor que el css externo--> "The Batman"</span>'The Batman', la nueva película de Matt Reeves ofrece una versión nueva y más oscura del icónico superhéroe de DC en la que Robert Pattinson hace de un aún joven Bruce Wayne que ayuda a Jim Gordon (Jeffrey Wright) a resolver una serie de asesinatos en Ciudad Gótica a través de muchos acertijos para resolver el plan de Enigma, pero ¿Tiene escena post créditos la película?</p>
         <!-- Esto es el video del trailer de Batman, creo que una buena forma de insertarlo es a través de un iframe-->
         <iframe class="rest" width="800" height="600"
         src="https://www.youtube.com/embed/IqRRLA6pZvo?start=1">
@@ -30,6 +31,12 @@
         <p class="rest">Hasta ese momento, es un guiño sin importancia a la película, dado que ese tipo de conexión misteriosa y creepy con el asesino es parte de la trama, pero si prestamos atención a la pantalla, porque el clip es corto y rápido, hay un pequeño flash que nos deja ver una imagen casi subliminal que nos muestra una web.</p>
         <img class="rest" src="img/img_2.jpeg">
         <h1 class="rest">Un juego con recompensa</h1>
+        <p class="rest">Lo divertido es que si vamos a la web www.rataalada.com nos encontramos con el chat que se encuentra Batman, y nos propone unos cuantos acertijos. La web es también una broma interna de la película puesto que la pista de "el rata alada" es uno de los momentos más divertidos de la película, casi una broma de traductores con la que El pingüino se ríe de Gordon y Batman.</p>
+        <img class="rest" src="img/img_3.jpeg">
         <p class="rest">La web tiene varios acertijos que nos pregunta un misterioso personaje que se supone que es el villano de la película, pero sus preguntas son bastante complejas y resolverlas no es tan fácil como parece, y si fallas te intenta poner nervioso, hasta que decide darte una nueva oportunidad y plantea nuevas preguntas.</p>
+    </div>
+        <!--Tabla de reparto-->
+    <div id="d_table" class="table">
+    </div>
 </body>
 </html>
