--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Emblema+One&display=swap" rel="stylesheet">
     <link rel="icon" href="img/icon.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Batman</title>
 </head>
 <body>
@@ -36,7 +37,101 @@
         <p class="rest">La web tiene varios acertijos que nos pregunta un misterioso personaje que se supone que es el villano de la película, pero sus preguntas son bastante complejas y resolverlas no es tan fácil como parece, y si fallas te intenta poner nervioso, hasta que decide darte una nueva oportunidad y plantea nuevas preguntas.</p>
     </div>
         <!--Tabla de reparto-->
-    <div id="d_table" class="table">
-    </div>
+        <div id="d_table">
+            <table id="table" class="t_table table-dark">
+                <tr>
+                    <td>Actor</td>
+                    <td>Rol</td>
+                    <td>Imagen</td>
+                </tr>
+                <tbody>
+                    <tr>
+                        <td>Robert Pattinson</td>
+                        <td>Bruce Wayne</td>
+                        <td><img src="img/tabla01" alt="Imagen de Robert Pattinson" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Zoë Kravitz</td>
+                        <td>Selina Kyle</td>
+                        <td><img src="img/tabla02" alt="Imagen de Zoë Kravitz" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Jeffrey Wright</td>
+                        <td>Lt. James Gordon</td>
+                        <td><img src="img/tabla03" alt="Imagen de Jeffrey Wright" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Colin Farrell</td>
+                        <td>Oz</td>
+                        <td><img src="img/tabla04" alt="Imagen de Colin Farrell" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Paul Dano</td>
+                        <td>The Riddler</td>
+                        <td><img src="img/tabla05" alt="Imagen de Paul Dano" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>John Turturro</td>
+                        <td>Carmine Falcone</td>
+                        <td><img src="img/tabla06" alt="Imagen de John Turturro" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Andy Serkis</td>
+                        <td>Alfred</td>
+                        <td><img src="img/tabla07" alt="Imagen de Andy Serkis" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Peter Sarsgaard</td>
+                        <td>District Attorney Gil Colson</td>
+                        <td><img src="img/tabla08" alt="Imagen de Peter Sarsgaard" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Barry Keoghan</td>
+                        <td>Unseen Arkham Prisoner</td>
+                        <td><img src="img/tabla09" alt="Imagen de Barry Keoghan" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Jayme Lawson</td>
+                        <td>Bella Real</td>
+                        <td><img src="img/tabla10" alt="Imagen de Jayme Lawson" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Gil Perez-Abraham</td>
+                        <td>Officer Martinez</td>
+                        <td><img src="img/tabla11" alt="Imagen de Gil Perez-Abraham" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Peter McDonald</td>
+                        <td>Kenzie</td>
+                        <td><img src="img/tabla12" alt="Imagen de Peter McDonald" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Con O'Neill</td>
+                        <td>Chief Mackenzie Bock</td>
+                        <td><img src="img/tabla13" alt="Imagen de Con O'Neill" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Alex Ferns</td>
+                        <td>Commissioner Pete Savage</td>
+                        <td><img src="img/tabla14" alt="Imagen de Alex Ferns" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Rupert Penry-Jones</td>
+                        <td>Mayor Don Mitchell, Jr.</td>
+                        <td><img src="img/tabla15" alt="Imagen de Rupert Penry-Jones" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Kosha Engler</td>
+                        <td>Mrs. Mitchell</td>
+                        <td><img src="img/tabla16" alt="Imagen de Kosha Engler" width="100"></td>
+                    </tr>
+                    <tr>
+                        <td>Archie Barnes</td>
+                        <td>Mitchell's Son</td>
+                        <td><img src="img/tabla17" alt="Imagen de Archie Barnes" width="100"></td>
+                    </tr>
+                </tbody>
+            </table>            
+        </div>        
 </body>
 </html>
