--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Emblema+One&display=swap" rel="stylesheet">
     <link rel="icon" href="img/icon.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <title>Batman</title>
 </head>
 <body>
@@ -132,6 +135,37 @@
                     </tr>
                 </tbody>
             </table>            
-        </div>        
+        </div>
+
+        <div class="container mt-5">
+            <!-- Slider de Bootstrap -->
+            <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <a href="https://www.imdb.com/es/title/tt1877830/" target="_blank" class="d-block w-100">
+                            <img src="img/slider01.png" class="d-block w-100" alt="First Slide">
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="https://www.imdb.com/es/title/tt0468569/?ref_=fn_all_ttl_4" target="_blank" class="d-block w-100">
+                            <img src="img/slider02.png" class="d-block w-100" alt="Second Slide">
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="https://www.imdb.com/es/title/tt0372784/?ref_=fn_all_ttl_5" target="_blank" class="d-block w-100">
+                            <img src="img/slider03.png" class="d-block w-100" alt="Third Slide">
+                        </a>
+                    </div>
+                </div>
+                <!-- Controles del slider -->
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
 </body>
 </html>
