--- a/index.html
+++ b/index.html
@@ -4,22 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Emblema+One&display=swap" rel="stylesheet">
     <link rel="icon" href="img/icon.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap JavaScript -->
+    <!-- Bootstrap JavaScript, necesario para que los botones funcionen-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <title>Batman</title>
 </head>
 <body>
+    <!--Explicación de clases:
+    main: header
+    rest: resto de lo necesario (no bonus ni main)
+    table: tabla (bonus 1)
+    carrouser: bootstrap
+    en los id pongo [primera_letra_del_tag]+$clase, por ejemplo para el div de main #d_main-->
+
     <!--El header de la página-->
-    <div id="div_main" class="main">
+    <div id="d_main" class="main">
         <p id="p_main" class="main">'The Batman': la misteriosa escena post-créditos de la película de Matt Reeves esconde un nuevo enigma para los fans
             The Batman</p>
     </div>
+    <!-- 
+        Sección principal del contenido
+        Incluye un título, varios párrafos que describen detalles de la película y una escena post-créditos, 
+        un iframe que inserta el tráiler de la película desde YouTube, y varias imágenes relacionadas con la película.
+    -->
     <div id="id_rest" class="rest">
         <h1 class="rest">The Batman</h1>
         <p class="rest"><span style="color: red;"> <!--Aqui el estilo inline creo que es mejor que el css externo--> "The Batman"</span>'The Batman', la nueva película de Matt Reeves ofrece una versión nueva y más oscura del icónico superhéroe de DC en la que Robert Pattinson hace de un aún joven Bruce Wayne que ayuda a Jim Gordon (Jeffrey Wright) a resolver una serie de asesinatos en Ciudad Gótica a través de muchos acertijos para resolver el plan de Enigma, pero ¿Tiene escena post créditos la película?</p>
@@ -40,6 +53,11 @@
         <p class="rest">La web tiene varios acertijos que nos pregunta un misterioso personaje que se supone que es el villano de la película, pero sus preguntas son bastante complejas y resolverlas no es tan fácil como parece, y si fallas te intenta poner nervioso, hasta que decide darte una nueva oportunidad y plantea nuevas preguntas.</p>
     </div>
         <!--Tabla de reparto-->
+        <!--
+        Tabla de reparto
+        Contiene una tabla con el reparto de la película "The Batman", incluyendo los nombres de los actores, 
+        los roles que interpretan y sus imágenes correspondientes.
+        -->
         <div id="d_table">
             <table id="table" class="t_table table-dark">
                 <tr>
@@ -138,7 +156,11 @@
         </div>
 
         <div class="container mt-5">
-            <!-- Slider de Bootstrap -->
+            <!-- 
+            Slider de Bootstrap
+            Contiene un carrusel de imágenes con enlaces a páginas de IMDb de diferentes películas de Batman.
+            Incluye controles para navegar entre las imágenes del carrusel.
+            -->
             <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
